--- a/ExpTS.ipynb
+++ b/ExpTS.ipynb
@@ -8,7 +8,22 @@
     "\n",
     "## Exponential Thompson Sampling (ExpTS)\n",
     "\n",
-    "Exponential Thompson Sampling (ExpTS) is a Bayesian algorithm for solving multi-armed bandit problems with exponential rewards. \"We present a general variant of Thompson sampling for exponential family rewards in Algorithm 1, which is termed ExpTS. At round t, ExpTS maintains an estimate of a sampling distribution for each arm, denoted as P. The algorithm generates a sample parameter $θ_i(t)$ for each arm $i$ independently from their sampling distribution and chooses the arm that attains the largest sample parameter. For each arm $i ∈ [K]$, the sampling distribution P is usually defined as a function of the total number of pulls $T_i(t)$ and the empirical average reward $\\hat{μ}_i(t)$. After pulling the chosen arm, the algorithm updates $T_i(t)$ and $\\hat{μ}_i(t)$ for each arm based on the reward rt it receives and proceeds to the next round."
+    "Exponential Thompson Sampling (ExpTS) is a Bayesian algorithm for solving multi-armed bandit problems with exponential rewards. \"We present a general variant of Thompson sampling for exponential family rewards in Algorithm 1, which is termed ExpTS. At round $t$, ExpTS maintains an estimate of a sampling distribution for each arm, denoted as $P$. The algorithm generates a sample parameter $θ_i(t)$ for each arm $i$ independently from their sampling distribution and chooses the arm that attains the largest sample parameter. For each arm $i ∈ [K]$, the sampling distribution P is usually defined as a function of the total number of pulls $T_i(t)$ and the empirical average reward $\\hat{μ}_i(t)$. After pulling the chosen arm, the algorithm updates $T_i(t)$ and $\\hat{μ}_i(t)$ for each arm based on the reward rt it receives and proceeds to the next round.\n",
+    "\n",
+    "\"We assume the reward is supported in $[R_{min}, R_{max}]$. Note that $R_{min} = 0$, and $R_{max} = 1$ for Bernoulli rewards, and $R_{min} = −∞$, and $R_{max} = ∞$ for Gaussian rewards. Let $p(x)$ and $q(x)$ be the density functions of two exponential family distributions with mean values $μ_p$ and $μ_q$ respectively. By the definition in Section 3, we have $kl(μ_p, μ_q) = KL(p(x), q(x)) = \\int_{R_{min}}^{R_{max}}p(x) log p(x)/q(x) dx$.\"\n",
+    "\n",
+    "\"To sample from $P(μ, n)$, we can first pick $y$ uniformly random from $[0, 1]$. Then, for $y ≥ 1/2$, we solve the equation $y = 1 − 1/2e^{−n.b_n.kl(μ,x)}$ for $x (x ≥ μ)$, which is equivalent to solving $log(1/(2(1 − y)))/(n.b_n) = kl(μ, x)$. For $y ≤ 1/2$, we solve the equation $y = 1/2e^{-n.b_n.kl(μ,x)}$ for $x (x ≤ μ)$, which is equivalent to solving $log(1/(2y))/(n.b_n) = kl(μ, x)$. In this way, $x$ would be an exact sample from distribution $P$. Let $b_n = (n − 1)/n$.\"\n",
+    "\n",
+    "\n",
+    "Algorithm 1 Exponential Family Thompson Sampling (ExpTS) <br />\n",
+    "1: Input: Arm set $[K]$ <br />\n",
+    "2: Initialization: Play each arm once and set $T_i(K) = 1$; let $\\hat{μ}_i(K)$ be the observed reward of playing arm $i$ <br />\n",
+    "3: for $t = K + 1, K + 2, ...$ do <br />\n",
+    "4: For all $i ∈ [K]$, sample $θ_i(t)$ independently from $P(̂μ_i(t), T_i(t))$ <br />\n",
+    "5: Play arm $A_t = argmax_{i∈[K]}θ_i(t)$ and observe the reward $r_t$ <br />\n",
+    "6: For all $i ∈ [K]$, update the mean reward estimator and the number of pulls: <br />\n",
+    "$$\\hat{μ}_i(t) = \\frac{T_i(t − 1).\\hat{μ}_i(t − 1) + r_t 1{i = A_t}}{T_i(t − 1) + 1{i = A_t}} , T_i(t) = T_i(t − 1) + 1{i = A_t}$$\n",
+    "7: end for\n"
    ]
   },
   {
