--- a/ExpTS.ipynb
+++ b/ExpTS.ipynb
@@ -15,7 +15,7 @@
     "\"To sample from $P(μ, n)$, we can first pick $y$ uniformly random from $[0, 1]$. Then, for $y ≥ 1/2$, we solve the equation $y = 1 − 1/2e^{−n.b_n.kl(μ,x)}$ for $x (x ≥ μ)$, which is equivalent to solving $log(1/(2(1 − y)))/(n.b_n) = kl(μ, x)$. For $y ≤ 1/2$, we solve the equation $y = 1/2e^{-n.b_n.kl(μ,x)}$ for $x (x ≤ μ)$, which is equivalent to solving $log(1/(2y))/(n.b_n) = kl(μ, x)$. In this way, $x$ would be an exact sample from distribution $P$. Let $b_n = (n − 1)/n$.\"\n",
     "\n",
     "\n",
-    "Algorithm 1 Exponential Family Thompson Sampling (ExpTS) <br />\n",
+    "*Algorithm 1 Exponential Family Thompson Sampling (ExpTS) <br />*\n",
     "1: Input: Arm set $[K]$ <br />\n",
     "2: Initialization: Play each arm once and set $T_i(K) = 1$; let $\\hat{μ}_i(K)$ be the observed reward of playing arm $i$ <br />\n",
     "3: for $t = K + 1, K + 2, ...$ do <br />\n",
@@ -23,7 +23,9 @@
     "5: Play arm $A_t = argmax_{i∈[K]}θ_i(t)$ and observe the reward $r_t$ <br />\n",
     "6: For all $i ∈ [K]$, update the mean reward estimator and the number of pulls: <br />\n",
     "$$\\hat{μ}_i(t) = \\frac{T_i(t − 1).\\hat{μ}_i(t − 1) + r_t 1{i = A_t}}{T_i(t − 1) + 1{i = A_t}} , T_i(t) = T_i(t − 1) + 1{i = A_t}$$\n",
-    "7: end for\n"
+    "7: end for\n",
+    "\n",
+    "[1] Jin, Tianyuan, Pan Xu, Xiaokui Xiao, and Anima Anandkumar. \"Finite-time regret of thompson sampling algorithms for exponential family multi-armed bandits.\" Advances in Neural Information Processing Systems 35 (2022): 38475-38487"
    ]
   },
   {
